--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "fastify": "^4.26.2",
+    "mongodb": "^6.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
